src/test/test_cases/invalid/syntaxErr/forLoop/fourLoop.wacc
# for typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  four (int i = 0, i < 4, i = i + 1) do
    skip
  done
end